work on the body metrics endpoint
